venndb-usage/tests/fails/any_bool.rs
use venndb::VennDB;

#[derive(Debug, VennDB)]
struct Employee {
    #[venndb(any)]
    is_alive: bool,
}

fn main() {}
